# librobot_vla

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  SUMMARY.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: README.md  ci-docker-build.yml  ci-gpu-tests.yml  ci-hil-tests.yml  ci-lint-test.yml  ci-lint.yml  ci-precommit.yml  ci.yaml  docker.yml  release.yaml  release.yml  self-hosted-test.yml  self-hosted.yml  test.yml
configs/: defaults.yaml
configs/dataset/: README.md
configs/experiment/: README.md  default.yaml  wheel_loader_groot.yaml
configs/model/action_head/: README.md  diffusion.yaml  mlp_oft.yaml
configs/model/encoder/: README.md  mlp.yaml
configs/model/framework/: README.md  groot_style.yaml
configs/model/vlm/: README.md
configs/robot/: README.md  so100_arm.yaml  wheel_loader.yaml
configs/training/: README.md  default.yaml  standard.yaml
docker/: Dockerfile  Dockerfile.base  Dockerfile.deploy  Dockerfile.precommit  Dockerfile.train  docker-compose.yaml  docker-compose.yml
docker/scripts/: build.sh  run_server.sh  run_train.sh
docs/: AI_HIL_DEVELOPMENT_PATTERN.md  ALGORITHM_ARCHITECTURE.md  PRE_COMMIT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  VLM_IMPLEMENTATION_SUMMARY.md  VLM_INTEGRATION_GUIDE.md  adding_models.md  adding_robots.md  architecture.md  configuration.md  deployment.md  getting_started.md  self_hosted_runner.md
docs/design/: API_CONTRACTS.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  COMPONENT_GUIDE.md  COMPUTING_PLATFORM.md  DESIGN_PRINCIPLES.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  ROADMAP.md
examples/: collection_demo.py  vlm_demo.py
examples/frameworks/: complete_demo.py
examples/wheel_loader/: README.md  config.yaml
librobot/: __init__.py  version.py
librobot/cli/: __init__.py  collect.py  evaluate.py  serve.py  train.py
librobot/collection/: README.md  __init__.py  base.py  collector.py
librobot/collection/converters/: __init__.py  base.py  hdf5.py  lerobot.py  rlds.py  zarr.py
librobot/collection/recording/: __init__.py  camera_recorder.py  data_buffer.py  episode_recorder.py
librobot/collection/teleoperation/: __init__.py  base.py  keyboard.py  leader_follower.py  mocap.py  spacemouse.py  vr.py
librobot/configs/: serve_default.yaml  train_default.yaml
librobot/data/: __init__.py  augmentation.py  base.py  registry.py
librobot/data/datasets/: __init__.py  base.py  hdf5.py  hdf5_dataset.py  lerobot.py  lerobot_dataset.py  registry.py  rlds.py  rlds_dataset.py  webdataset.py  zarr.py
librobot/data/tokenizers/: __init__.py  action.py  action_tokenizer.py  fast_tokenizer.py  image.py  state.py  state_tokenizer.py
librobot/data/transforms/: __init__.py  action.py  action_transforms.py  compose.py  image.py  image_transforms.py  state.py  state_transforms.py  temporal.py
librobot/evaluation/: __init__.py  benchmarks.py  metrics.py
librobot/inference/: __init__.py  action_buffer.py  kv_cache.py  policy_vla.py  quantization.py
librobot/inference/buffers/: __init__.py  action_buffer.py
librobot/inference/clients/: __init__.py  base.py
librobot/inference/optimization/: __init__.py  export.py
librobot/inference/policy/: __init__.py  base.py
librobot/inference/server/: __init__.py  base_server.py  grpc_server.py  rest_server.py
librobot/inference/servers/: __init__.py  grpc_server.py  rest_server.py  ros2_server.py  websocket_server.py
librobot/models/: __init__.py  builder.py
librobot/models/action_heads/: __init__.py  autoregressive_fast.py  base.py  diffusion.py  hybrid.py  mlp_oft.py  registry.py  transformer_act.py
librobot/models/components/: __init__.py  activations.py
librobot/models/encoders/: __init__.py  base.py  registry.py
librobot/models/frameworks/: README.md  __init__.py  act_style.py  base.py  custom.py  groot_style.py  helix_style.py  octo_style.py  openvla_style.py  pi0_style.py  registry.py  rt2_style.py
librobot/models/vlm/: README.md  __init__.py  base.py  florence.py  internvl.py  llava.py  paligemma.py  qwen_vl.py  registry.py
librobot/robots/: __init__.py  base.py  humanoid.py  registry.py  so100_arm.py  wheel_loader.py
librobot/robots/arms/: __init__.py  arm.py  arm_robot.py  base.py  robot_arms.py  robots.py  so100_arm.py
librobot/robots/articulated_trucks/: __init__.py  articulated_truck.py  articulated_truck_robot.py
librobot/robots/excavators/: __init__.py  excavator.py  excavator_robot.py
librobot/robots/humanoids/: __init__.py  humanoid.py  humanoid_robot.py  humanoid_robots.py  robots.py
librobot/robots/mobile/: __init__.py  base.py  mobile.py  mobile_robot.py  mobile_robots.py  robots.py
librobot/robots/mobile_manipulators/: __init__.py  base.py  manipulators.py  mobile_manipulator.py  mobile_manipulator_robot.py  robots.py  wheel_loader.py  wheel_loader_base.py
librobot/training/: __init__.py  advanced_learning.py  distributed.py  experiment_tracking.py  hyperparameter_tuning.py  optimizers.py  schedulers.py  trainer.py
librobot/utils/: __init__.py  checkpoint.py  config.py  io.py  logging.py  memory.py  profiler.py  registry.py  seed.py  timer.py
requirements/: all.txt  base.txt  deploy.txt  dev.txt  inference.txt  train.txt
scripts/: QUICKSTART.md  README.md  __init__.py  evaluate.py  export.py  format.sh  inference.py  train.py
tests/: README.md  conftest.py  test_data_module.py  test_vlm_implementations.py
tests/benchmarks/: __init__.py  benchmark_inference.py  benchmark_training.py
tests/integration/: __init__.py  test_end_to_end.py  test_inference_pipeline.py  test_training_pipeline.py
tests/unit/: __init__.py  test_action_heads.py  test_augmentation.py  test_checkpoint.py  test_collection.py  test_config.py  test_data.py  test_encoders.py  test_frameworks.py  test_io.py  test_logging_utils.py  test_metrics.py  test_models.py  test_registry.py  test_robots.py  test_seed.py  test_timer.py  test_version.py
(+64 files in other folders)
