[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "librobot"
version = "0.1.0"
description = "Comprehensive Vision-Language-Action (VLA) framework for robotics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "LibroBot Contributors"}
]
keywords = ["robotics", "vla", "vision-language-action", "imitation-learning", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "einops>=0.7.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "h5py>=3.10.0",
    "zarr>=2.17.0",
    "opencv-python>=4.9.0",
    "albumentations>=1.4.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

train = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.10.0",
    "diffusers>=0.27.0",
]

inference = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "onnx>=1.16.0",
    "onnxruntime-gpu>=1.17.0",
]

all = [
    "librobot[dev,train,inference]",
]

[project.urls]
Homepage = "https://github.com/wfhit/librobot_vla"
Repository = "https://github.com/wfhit/librobot_vla"
Documentation = "https://github.com/wfhit/librobot_vla#readme"

[project.scripts]
librobot-train = "librobot.cli.train:main"
librobot-eval = "librobot.cli.evaluate:main"
librobot-infer = "librobot.cli.inference:main"
librobot-export = "librobot.cli.export:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["librobot*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
