[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librobot"
version = "0.1.0"
description = "Complete Vision-Language-Action (VLA) framework for robotics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LibroBot Contributors"}
]
keywords = ["robotics", "vision-language-action", "vla", "robot-learning", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "einops>=0.6.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=0.27.0",
    "deepspeed>=0.13.0",
    "transformers>=4.57.0",
    "datasets>=2.18.0",
    "tokenizers>=0.19.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "mlflow>=2.10.0",
    "bitsandbytes>=0.42.0",
    "peft>=0.8.0",
    "diffusers>=0.26.0",
]

inference = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "grpcio>=1.60.0",
    "websockets>=12.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.17.0",
]

data = [
    "lerobot>=1.0.0",
    "tensorflow-datasets>=4.9.0",
    "h5py>=3.10.0",
    "zarr>=2.16.0",
    "webdataset>=0.2.0",
    "opencv-python>=4.9.0",
    "albumentations>=1.3.0",
]

robots = [
    "gymnasium>=0.29.0",
    "mujoco>=3.1.0",
    "dm_control>=1.0.0",
]

ros = [
    "rclpy>=3.3.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

all = [
    # Training dependencies
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "accelerate>=0.25.0",
    # Inference dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Data dependencies
    "datasets>=2.18.0",
    "pillow>=10.2.0",
    # Robot dependencies
    "pyserial>=3.5",
    # Dev dependencies
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wfhit/librobot_vla"
Documentation = "https://librobot.readthedocs.io"
Repository = "https://github.com/wfhit/librobot_vla"
Issues = "https://github.com/wfhit/librobot_vla/issues"

[project.scripts]
librobot-train = "librobot.cli.train:main"
librobot-eval = "librobot.cli.evaluate:main"
librobot-serve = "librobot.cli.serve:main"
librobot-collect = "librobot.cli.collect:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["librobot*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
librobot = ["py.typed", "configs/**/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N801", "N802", "N806", "N812", "N817"]
exclude = [".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=librobot --cov-report=term-missing --cov-report=html"
timeout = 300

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
match = ".*\\.py"
match_dir = "^(?!tests|examples|build|dist).*"
